2002-06-18  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ConstructorAccessCheck): Fix regressions not
	covered by patch 280 - still bug 2899.

2002-06-18  Eric B Blake  <eblake@ee.byu.edu>

	* src/symbol.h (HasEnclosingInstance):
	* src/symbol.cpp (HasEnclosingInstance): 
	* src/expr.cpp (CreateAccessToType, ProcessAmbiguousName),
	(ProcessThisExpression, ProcessSuperExpression): Fix test of
	enclosing instances to not bypass uninitialized current
	instance. This is on advice from Gilad Bracha (author of JLS 2nd
	edition), and highlights some bad Jacks tests - bug 2920.

2002-06-18  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (AppendString): 
	* src/expr.cpp (ProcessAssignmentExpression):
	* src/lookup.cpp (EndsInKnownString): Correctly concatenate
	1-character constant strings - bug 2919.

2002-06-18  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/expr.cpp: Formatting.
	* src/error.cpp (SELF_IN_EXPLICIT_CONSTRUCTOR),
	(ENCLOSING_INSTANCE_ACCESS_FROM_CONSTRUCTOR_INVOCATION): Improve
	error wording.

2002-06-17  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ConstructorAccessCheck): Allow access of protected
	superconstructors - bug 2899.

2002-06-17  Eric Blake  <ebb9@email.byu.edu>

	* src/body.cpp (ProcessSuperCall): Remove duplicate error message,
	final cleanup for bug 386.
	
2002-06-17  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (AddInheritedMethods): Synthetic methods do not
	need to be inherited - bug 2924.

2002-06-17  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitSwitchStatement, EmitBlockStatement),
	(DeclareLocalVariable):
	* src/bytecode.h (Push, Pop): Mark local variables uninitialized
	regardless of JIKES_DEBUG, and fix problems when a declaration
	statement is not executed because a prior statement ended abruptly
	- bug 2907.

2002-06-17  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitSwitchStatement): Don't optimize gotos
	with no-op default label - bug 2895.
